mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_func.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_undefined_func.mux`
error: Undefined function 'foo'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_undefined_func.mux:2:1
   |
 2 | foo()
   | ^^^
